@@ -23,6 +23,8 @@ production.
 * (bug 19052) Unicode space separator characters (Zs) now terminates external
   links and images links.
 * (bug 30160) Add public method to mw.loader to get module names from registry.
+* (bug 15558) Parameters to special pages included in wikitext can now be passed
+  as with templates.
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if
